# conway-opengl

./: .clang-format  .gitignore  CMakeLists.txt  README.md
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/imgui/: CMakeLists.txt
src/: app.cpp  app.h  camera.h  gameoflife.cpp  gameoflife.h  gui.cpp  gui.h  main.cpp  renderer.cpp  renderer.h  shader.h
